@@ -19,3 +19,4 @@
 # 20240822
 - Custom Sticker support
 - Properly judge empty message
+- Poll message support (DRAFT)
